oris/frontend/angular-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
spec:
  rules:
    - host: doda.ews.gic.ericsson.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 4400
  tls:
    - hosts:
        - doda.ews.gic.ericsson.se
      secretName: doda-cert
